# sfrbox-api

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  example.py  noxfile.py  pyproject.toml
.github/: renovate-config.json  renovate.json
.github/workflows/: constraints.txt  labeler.yml  release.yml  renovate.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/sfrbox_api/: __init__.py  bridge.py  exceptions.py  helpers.py  models.py
src/sfrbox_api/cli/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_bridge.py  test_helper.py
tests/cli/: __init__.py  test_main.py
tests/fixtures/: auth.checkToken.xml  auth.getToken.xml  dsl.getInfo.3DCM020200r015.xml  dsl.getInfo.xml  fail.115.xml  fail.204.xml  fail.xml  ftth.getInfo.3DCM020200r015.xml  ftth.getInfo.xml  system.getInfo.3DCM020200r015.xml  system.getInfo.3_5_8.xml  system.getInfo.BOX10H-XbSP-1.6.14.1.xml  system.xml  voip.getCallHistory.xml  voip.getInfo.xml  wan.getInfo.xml  wlan.getClientList.xml  wlan.getInfo.xml
