[tool.poetry]
name = "sfrbox-api"
version = "0.0.7"
description = "SFR Box API"
authors = ["epenet", "HACF <contact@hacf.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hacf-fr/sfrbox-api"
repository = "https://github.com/hacf-fr/sfrbox-api"
documentation = "https://sfrbox-api.readthedocs.io"
keywords=["sfrbox", "router"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/sfrbox-api/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.23.1"
defusedxml = ">=0.7.1"
pydantic = ">=1.10.13"
click = { version = ">=8.0.1", optional = true }

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = "^1.6"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-asyncio = ">=0.20.2"
pytest-cov = ">=4.0.0"
pyupgrade = ">=2.29.1"
respx = ">=0.20.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.scripts]
sfrbox-api = "sfrbox_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["sfrbox_api", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = 'defusedxml.*'
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
